Changing link to local copy

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 	<head>
 		<title>Secret Messages</title>
-		<script src="http://www.onicos.com/staff/iz/amuse/javascript/expert/BigInt.txt"></script>
+		<script src="BigInt.txt"></script>
 		<style>
 			/*   #89888C; /*med gray*/
 			/*   #012340; /*dark blue*/
